--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+	<form action="" method="POST" >
+		<h1>Feedback Form</h1>
+		<label for="name">Name</label>
+		<input type="text" placeholder="name" minlength="3" maxlength="50" id="name" required>
+		<br>
+		<label for="portfolio">Portfolio</label>
+		<input type="url" placeholder="user's webpage" id="portfolio" required>
+		<br>
+		<label for="favColor">Favourite colour</label>
+		<input type="color" id="favColor">
+		<br>
+        <label for="likeness">likeness</label>
+		<input type="range" id="likeness" name="likeness" min="1" max="100">
+		<br>
+		<input type="submit" value="submit">
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
